WIP: integrate HelloAsso form type in Tombola entity, mapper and service; stub out player import